# APIDocs

./: .gitignore  README.md
backend/fastapi-be/: app.py  docker-compose.yml  main.py  pyproject.toml
backend/fastapi-be/ai/api_doc_builder/: doc_generator.py
backend/fastapi-be/ai/api_doc_builder/agents/: DocBuilderNode.py  DocGenNode.py
backend/fastapi-be/ai/api_doc_builder/graph/: BuilderGraphState.py  doc_builder_graph.py
backend/fastapi-be/ai/api_doc_builder/nodes/: EndpointsBatcherNode.py  ValidateAndFormatNode.py
backend/fastapi-be/ai/api_doc_builder/prompts/: get_code_generation_prompt.py  get_doc_builder_prompt.py
backend/fastapi-be/ai/api_doc_builder/utils/: batch_endpoints_per_collection.py  validate_and_format.py
backend/fastapi-be/ai/api_extractor/: main.py  test.py
backend/fastapi-be/ai/api_extractor/agents/: ExtractOpenAPIJSNode.py  ExtractOpenAPIPythonNode.py
backend/fastapi-be/ai/api_extractor/graph/: GraphState.py  graph.py
backend/fastapi-be/ai/api_extractor/nodes/: FilesChunker.py  LoadbackendFiles.py  Merger.py
backend/fastapi-be/ai/api_extractor/utils/: chunker.py  (+2 more)
backend/fastapi-be/ai/test_case_generation/: tester.py
backend/fastapi-be/ai/utils/: get_llm_response.py  parse_json_response.py
backend/fastapi-be/configs/: logger.py
backend/fastapi-be/db/: db_connection.py  get_mongo_client.py
backend/fastapi-be/models/: APIDocs.py  APIDocsRequest.py  Endpoints.py  EndpointsRequest.py  SaveEndpoints.py  TestCase.py  TestGenerationRequest.py
backend/fastapi-be/routes/: api_doc_generation.py  endpoints.py  test_generation.py
(+9 files in other folders)
